--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native-safe-area-context": "3.4.1",
     "react-native-url-polyfill": "^1.3.0",
     "text-encoding": "^0.7.0",
-    "typescript": "^4.9.4"
+    "typescript": "4.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,8 +42,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native"
